# LumCore

./: Cargo.toml  curseforge_config.json
src/: main.rs
src/lum/: core.rs  core_app.rs  java_jar_runner.rs  mod.rs  watcher.rs
src/lum/api/: curseforge_api.rs  github_api.rs  mod.rs  updater.rs
src/lum/commands/: core.rs  curseforge.rs  github.rs  jar.rs  mod.rs  server.rs  watcher.rs
src/lum/config/: curseforge_config.rs  github_config.rs  healing_config.rs  mod.rs  paths.rs  server_config.rs  updates_config.rs  watcher_config.rs
src/lum/health/: health_monitor.rs  mod.rs
src/lum/watchers/:  file_watcher.rs  mod.rs  watcher.rs  watcher_manager.rs
src/util/: config.rs  configuration.rs  java_jar_runner.rs  mod.rs
src/util/config/: mod.rs  paths.rs  server_config.rs
