[package]
name = "lumcoreserver"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1.3"
md-5 = "0.10.6"
sha1 = "0.10.6"
chrono = "0.4.38"
anyhow = "1.0.86"
sha2 = "0.10.8"